--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
     </div>
 
     <footer class="border-top footer bg-dark text-muted">
-        <div class="container">
+        <div class="container text-center">
             Made with <i class="bi bi-heart-fill"></i> by Dagim Asnake
         </div>
     </footer>
